fixes z-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,7 +67,7 @@ nav {
   position: fixed;
   top: 25px;
   position: relative;
-  z-index: 4;
+  // z-index: 4;
 }
 
 .home-link{
@@ -130,6 +130,7 @@ nav {
   position: relative;
   top: 100px;
   height: 400px;
+  transition: opacity 1.2s;
 }
 
 #main {
@@ -155,29 +156,24 @@ nav {
 
 #main.ng-enter, #main.ng-leave {
   position: absolute;
-  transition: all .8s ease-out;
+  transition: transform .8s ease-out;
 }
 
 #main.ng-enter {
   transform:rotateZ(180deg);
-  z-index: 0;
 }
 
 #main.ng-enter-active {
   transform:rotateZ(360deg);
-  z-index: 10;
 }
 
 #main.ng-leave {
   box-shadow: -20px -20px 40px black, 20px -20px 40px black, -10px -10px 0 black, -10px -10px 0 black, 10px -10px 0 black;
-  z-index: 5;
   transform:rotateZ(0deg);
   color: white;
 }
 
 #main.ng-leave-active {
-  // z-index: 10;
-  z-index: 0;
   transform:rotateZ(180deg);
 }
 
@@ -192,12 +188,41 @@ nav {
     background-position: center;
     background-size: contain;
     transform-origin: 50% 50%;
+    display: table;
     box-shadow: -20px -20px 40px black, 20px 20px 40px black, 20px -20px 40px black, -20px 20px 40px black, -10px 10px 0 black, -10px -10px 0 black, 10px 10px 0 black, 10px -10px 0 black !important;
+    .view {
+      display: table-cell;
+      width: 100%;
+      height: 100%;
+      vertical-align: middle;
+      top: 0;
+    }
+    &.ng-enter {
+      z-index: 0;
+      .view{
+        opacity: 0;
+      }
+    }
     &.ng-enter-active {
       transform:rotateZ(720deg);
+      z-index: 16;
+      .view{
+        opacity: 1;
+      }
+    }
+    &.ng-leave {
+      z-index: 16;
+      .view {
+        opacity: 1;
+      }
     }
     &.ng-leave-active {
+      box-shadow: none;
       transform: rotateZ(540deg);
+      z-index: 0;
+      .view {
+        opacity: 0;
+      }
     }
   }
 }
